답글 기능 디버깅 완료